fix scrollbar, fix listmode toggle

--- a/src/styles/component/CardList/NewCardList/_NewCardList.scss
+++ b/src/styles/component/CardList/NewCardList/_NewCardList.scss
@@ -1,5 +1,5 @@
 .new-card-list{
-  margin: 115px 0 0 20px;
+  margin: 65px 0 0 20px;
   min-width: 280px;
   height: 100%;
   cursor: pointer;
