--- a/src/styles/component/Project/_ProjectTeamList.scss
+++ b/src/styles/component/Project/_ProjectTeamList.scss
@@ -2,6 +2,7 @@
   overflow: scroll;
   overflow-y: hidden;
   overflow-x: hidden;
+  flex: 1;
   margin: 0 30px;
   .team{
     &__name{
