--- a/src/styles/component/SideMenu/_SideMenu.scss
+++ b/src/styles/component/SideMenu/_SideMenu.scss
@@ -1,6 +1,8 @@
 .side-menu{
   min-width: 220px;
+  max-width: 220px;
   background-color: $sidebar-bg;
+  flex: 1;
   &__user{
     display: flex;
     flex-direction: row;
