--- a/src/styles/routes/ProjectDetail/_ProjectDetail.scss
+++ b/src/styles/routes/ProjectDetail/_ProjectDetail.scss
@@ -1,10 +1,11 @@
 .list-container{
   display: flex;
   justify-content: space-between;
-  overflow-x: scroll;
+  flex: 1;
   &__horizontal{
     flex-direction: column;
-    width: calc(100vw - 250px);
+    width: calc(100vw - 220px);
+    overflow: scroll;
     .card-wrap{
       width: 100%;
       border-bottom: 1px solid rgba(97, 97, 97, 0.18);
@@ -17,8 +18,18 @@
       }
     }
   }
+
+  &__vertical{
+    .card-list{
+      min-width: 280px;
+      padding: 0;
+    }
+    margin-bottom: 65px;
+  }
 }
 .project-detail{
+  display: flex;
+  flex-direction: column;
   flex: 1;
   background-color: $mainpage-bg;
   .container-fluid{
@@ -29,11 +40,13 @@
 .main-container{
   display: flex;
   flex-direction: row;
+  height: 100%;
 }
 
 .list-mode{
   width: calc(100vw - 250px);
   margin-top: 30px;
+  margin-bottom: 30px;
   display: flex;
   justify-content: flex-end;
   padding: 0 10px;
