--- a/src/styles/routes/Projects/_Projects.scss
+++ b/src/styles/routes/Projects/_Projects.scss
@@ -1,3 +1,5 @@
 .projects-dashboard{
+  display: flex;
+  flex-direction: column;
   flex: 1;
 }
